--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,59 @@ footer {
   margin: auto;
   width: 250px;
   position: relative;
-  right: 322px;
+  right: 75px;
+}
+
+.useful-links {
+  background-color: #000;
+  width: 250px;
+  padding: 50px;
+  color: #fff;
+  white-space: nowrap;
+  position: relative;
+  right: 145px;
+}
+
+#nav-link1 {
+  flex-direction: column;
+  width: 76px;
+  margin-bottom: 25px;
+  display: flex;
+  bottom: -145px;
+  left: 35px ;
+  position: relative;
+  color: #fff;
+  text-decoration: none;
+}
+
+.useful-links1 {
+  background-color: #000;
+  width: 250px;
+  padding: 50px;
+  color: #fff;
+  white-space: nowrap;
+  position: relative;
+  right: 145px;
+}
+
+#nav-link2 {
+  flex-direction: column;
+  width: 76px;
+  margin-bottom: 25px;
+  display: flex;
+  bottom: -80px;
+  left: 5px ;
+  position: relative;
+  color: #fff;
+  text-decoration: none;
+}
+
+#nav-link1:hover {
+  text-decoration: underline;
+}
+
+#nav-link2:hover {
+  text-decoration: underline;
 }
 
 #tm-web {
@@ -92,7 +144,7 @@ footer {
 #norse-logo {
   width: 200px;
   position: relative;
-  top: -35px;
+  top: -15px;
   right: 20px;
 }
 
@@ -415,7 +467,14 @@ input[type=submit]:active {
   position: relative;
   bottom: -540px;
   color: #fff;
-  left: -115px;
+  left: -85px;
+}
+
+.link-header {
+  color: #fff;
+  font-size: 32px;
+  position: relative;
+  left: -150px;
 }
 
 .contact-tile {
@@ -588,20 +647,36 @@ input[type=submit]:active {
 
 #medway-logo1 {
   position: relative;
-  top: -40px;
+  top: -20px;
   right: -90px;
 }
 
 #medway-email {
   position: relative;
   right: -150px;
-  top: -25px;
+  top: 55px;
+}
+
+#medway-phone {
+  position: relative;
+  top: 125px;
+}
+
+#pier-address {
+  position: relative;
+  right: 10px;
+  top: 80px;
 }
 
 #stoney-lane {
   position: relative;
   right: -140px;
-  top: -25px;
+  top: 55px;
+}
+ 
+#norse-address {
+  position: relative;
+  top: 80px;
 }
 
 .fa {
