--- a/css/styles-xxs.css
+++ b/css/styles-xxs.css
@@ -18,6 +18,10 @@ body {
     padding: 10px;
   }
 
+  .cookies {
+    transform: translateY(10px);
+  }
+
   header {
     background-color: #0a5a83; /* Blue */
   }
@@ -701,4 +705,8 @@ picture, picture img {
   height: auto; /* Maintain aspect ratio */
   display: block; /* Remove unwanted whitespace below the image */
   margin-bottom: 25px;
+}
+
+.tag-line {
+  transform: translateY(10px);
 }
